--- a/src/blog-detail.html
+++ b/src/blog-detail.html
@@ -228,7 +228,8 @@
           </span>
           &nbsp;&gt;&nbsp;
           <span>
-            <span class="breadcrumb__current-item">ブログ一覧</span>
+            <a href="./blog.html">
+            <span class="breadcrumb__current-item">ブログ一覧</span></a>
           </span>
           &nbsp;&gt;&nbsp;
           <span>
