--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <!-- loading animation -->
-    <!-- <section class="loading js-loading">
+    <section class="loading js-loading">
       <div class="loading__title-wrap title">
         <h2 class="title__main title__main--green">DIVING</h2>
         <p class="title__sub title__sub--green">into the ocean</p>
@@ -72,7 +72,7 @@
         <h2 class="title__main">DIVING</h2>
         <p class="title__sub">into the ocean</p>
       </div>
-    </section> -->
+    </section>
 
     <!-- ページトップボタン -->
     <div class="page-top-button js-page-top">
