--- a/src/voice.html
+++ b/src/voice.html
@@ -245,7 +245,7 @@
           </div>
 
           <div class="sub-voice__content">
-            <ul class="voice-cards voice-cards--gap">
+            <ul class="voice-cards">
               <li class="voice-cards__item">
                 <div class="voice-card">
                   <div class="voice-card__body">
