--- a/src/faq.html
+++ b/src/faq.html
@@ -239,37 +239,37 @@
             <div class="faq__inner">
               <ul class="faq__list faq-list">
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question">ここに質問が入ります。</p>
+                  <p class="faq-list__item-question js-faq-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question">ここに質問が入ります。</p>
+                  <p class="faq-list__item-question js-faq-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question">ここに質問が入ります。</p>
+                  <p class="faq-list__item-question js-faq-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question">ここに質問が入ります。</p>
+                  <p class="faq-list__item-question js-faq-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question">ここに質問が入ります。</p>
+                  <p class="faq-list__item-question js-faq-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question">ここに質問が入ります。</p>
+                  <p class="faq-list__item-question js-faq-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
