--- a/src/information.html
+++ b/src/information.html
@@ -474,13 +474,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                      <a href="information.html?id=tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                      <a href="information.html?id=tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                      <a href="information.html?id=tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
