--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                        <a href="information.html?id=tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                        <a href="information.html?id=tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                        <a href="information.html?id=tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -371,7 +371,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer layout-footer--privacy-policy">
+    <footer class="footer layout-footer">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -447,13 +447,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                      <a href="information.html?id=tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab02#tab02">体験ダイビング</a>
+                      <a href="information.html?id=tab02">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab03#tab03">ファンダイビング</a>
+                      <a href="information.html?id=tab03">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
