--- a/src/information.html
+++ b/src/information.html
@@ -155,13 +155,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                        <a href="information.html?id=tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                        <a href="information.html?id=tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                        <a href="information.html?id=tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -341,7 +341,7 @@
         </div>
       </section>
 
-      <section class="contact layout-contact layout-contact--info">
+      <section class="contact layout-contact">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -397,7 +397,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer layout-footer--info">
+    <footer class="footer layout-footer">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
