--- a/src/price.html
+++ b/src/price.html
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                        <a href="information.html?id=tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                        <a href="information.html?id=tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                        <a href="information.html?id=tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -370,7 +370,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact layout-contact--price">
+      <section class="contact layout-contact">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -426,7 +426,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer layout-footer--subPrice">
+    <footer class="footer layout-footer">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -502,13 +502,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                      <a href="information.html?id=tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                      <a href="information.html?id=tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                      <a href="information.html?id=tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
