--- a/src/thanks.html
+++ b/src/thanks.html
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                        <a href="information.html?id=tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                        <a href="information.html?id=tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                        <a href="information.html?id=tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -260,7 +260,7 @@
       </div>
     </main>
 
-    <footer class="footer layout-footer layout-footer--thanks">
+    <footer class="footer layout-footer">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -336,13 +336,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
+                      <a href="information.html?id=tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
+                      <a href="information.html?id=tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
+                      <a href="information.html?id=tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
